--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 <body>
     <header>
 	    	<div class="header-name">
-	    		<p>Scott Sautter</p>
+	    		Scott Sautter
 	    	</div>
 	    	<nav>
 	    		<a href="index.html">About</a>
