Should be about finished now

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,13 +35,13 @@
 		<h1>Portfolio</h1>
 		<hr>
 		<div class="portfolio-image">
-			<a href="Poison-Anthem/index.html" target="_blank">
+			<a href="https://sdsautter.github.io/Poison-Anthem" target="_blank">
 				<img src="assets/images/PA-Portfolio.png" alt="Poison Anthem"> 
 				<h2>Poison Anthem</h2>
 			</a>
 		</div>
 		<div class="portfolio-image">
-			<a href="Poison-Anthem/index.html" target="_blank">
+			<a href="https://sdsautter.github.io/Poison-Anthem" target="_blank">
 				<img src="assets/images/portfolio1.png" alt="Portfolio2">
 				<!-- <h2>Rabin</h2> -->
 			</a>
@@ -54,14 +54,8 @@
 		</div>
 		<div class="portfolio-image">
 			<a href="Poison-Anthem/index.html" target="_blank">
-				<img src="assets/images/nature.png" alt="Portfolio4">
+				<img src="assets/images/sonic-boom.jpg" alt="Portfolio4">
 				<h2>Sonic Boom!</h2>
-			</a>
-		</div>
-		<div class="portfolio-image">
-			<a href="Poison-Anthem/index.html" target="_blank">
-				<img src="assets/images/walking.jpg" alt="Portfolio5">
-				<h2>Artumn</h2>
 			</a>
 		</div>
 		<div class="portfolio-image">
