Portfolio links updated

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,13 +47,13 @@
 			</a>
 		</div>
 		<div class="portfolio-image">
-			<a href="Poison-Anthem/index.html" target="_blank">
+			<a href="https://sdsautter.github.io/Poison-Anthem" target="_blank">
 				<img src="assets/images/Jennifer2.png" alt="Portfolio3">
 				<h2>Someone made this</h2>
 			</a>
 		</div>
 		<div class="portfolio-image">
-			<a href="Poison-Anthem/index.html" target="_blank">
+			<a href="https://sdsautter.github.io/Poison-Anthem" target="_blank">
 				<img src="assets/images/sonic-boom.jpg" alt="Portfolio4">
 				<h2>Sonic Boom!</h2>
 			</a>
