--- a/portfolio.html
+++ b/portfolio.html
@@ -41,19 +41,19 @@
 			</a>
 		</div>
 		<div class="portfolio-image">
-			<a href="https://sdsautter.github.io/Poison-Anthem" target="_blank">
+			<a href="https://sdsautter.github.io/Madladingus/" target="_blank">
 				<img src="assets/images/portfolio1.png" alt="Portfolio2">
 				<!-- <h2>Rabin</h2> -->
 			</a>
 		</div>
 		<div class="portfolio-image">
-			<a href="https://sdsautter.github.io/Poison-Anthem" target="_blank">
+			<a href="https://sdsautter.github.io/Madladingus/" target="_blank">
 				<img src="assets/images/Jennifer2.png" alt="Portfolio3">
-				<h2>Someone made this</h2>
+				<h2>Madladingus</h2>
 			</a>
 		</div>
 		<div class="portfolio-image">
-			<a href="https://sdsautter.github.io/Poison-Anthem" target="_blank">
+			<a href="#" target="_blank">
 				<img src="assets/images/sonic-boom.jpg" alt="Portfolio4">
 				<h2>Sonic Boom!</h2>
 			</a>
